--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 project (road)
 cmake_minimum_required(VERSION 2.8.12)
 
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+set(CMAKE_AUTOMOC ON)
+
 #QT LIBS
 
 find_package(Qt4 COMPONENTS QTCORE QTGUI QTOPENGL)
-
-set(CMAKE_AUTOMOC ON)
 
 find_package(OpenGL)
 #find_package(QtOpenGL)
